Add info to package.json
Fixes #4.

--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
     "name": "nodify-string",
     "version": "1.0.0",
     "description": "A utility for converting HTML strings into DOM nodes without innerHTML.",
+    "license": "MIT",
     "repository": "seanmcp/nodify-string",
+    "homepage": "https://github.com/seanmcp/nodify-string#readme",
+    "bugs": "https://github.com/seanmcp/nodify-string/issues",
     "main": "src/index.js",
+    "unpkg": "src/nodify-string.min.js",
+    "author": "Sean McPherson <seanmcp25@gmail.com> (https://github.com/seanmcp)",
     "keywords": [
         "nodify",
+        "node",
         "string",
         "html",
         "marked",
