Add uglify-js dev dependency

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "html",
         "marked",
         "innerHTML"
-    ]
+    ],
+    "devDependencies": {
+        "uglify-js": "^3.4.9"
+    }
 }
